<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.auth.LoginActivity"
  android:transitionName="login_transition"
  >

  <ImageView
    android:id="@+id/imageView2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent=".3"
    android:layout_marginTop="32dp"
    android:src="@drawable/ic_logo_jumbotail"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:ignore="ContentDescription" />



  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginStart="32dp"
    android:fontFamily="@font/poppins_bold"
    android:text="@string/hi_there"
    android:textColor="@color/grey_66"
    android:textSize="30sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fontFamily="@font/poppins"
    android:text="@string/please_login_to_continue"
    android:textColor="@color/grey_33"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="@+id/textView3"
    app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inputLayoutUsername"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:hint="@string/enter_username"
    app:boxBackgroundColor="@color/white"
    app:startIconDrawable="@drawable/ic_edtext_user"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edTextUsername"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/inputLayoutPassword"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:hint="@string/enter_password"
    app:boxBackgroundColor="@color/white"
    app:endIconMode="password_toggle"
    app:startIconDrawable="@drawable/ic_edtext_password"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inputLayoutUsername">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/edTextPassword"
      android:layout_width="match_parent"
      android:layout_height="50dp"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btnLogin"
    android:layout_width="0dp"
    android:layout_height="60dp"
    android:layout_marginTop="8dp"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    android:backgroundTint="@color/parsley_theme"
    android:text="@string/login"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/inputLayoutPassword" />
  <Button
    android:id="@+id/btnForgetPass"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:text="@string/forget_password"
    android:textColor="@color/grey_66"
    app:layout_constraintEnd_toEndOf="@+id/btnLogin"
    app:layout_constraintTop_toBottomOf="@+id/btnLogin"
    android:background="#00000000"/>


</androidx.constraintlayout.widget.ConstraintLayout>